feat: all admin endpoints
